--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-<html lang="en"
+index.html
+<script>
+  var a = 1;
+  var b = 2;
+  var c = 3;
 
-<head>
-    <meta charset="UTF-8"
-    <meta 
-</head>
+
+
+</script>
