--- a/index.html
+++ b/index.html
@@ -1,9 +1,62 @@
 index.html
 <script>
-  var a = 1;
-  var b = 2;
-  var c = 3;
 
+  var a = Math.floor(Math.random() * 3) + 1;
+  var b = Math.floor(Math.random() * 3) + 1;
+  var c = Math.floor(Math.random() * 3) + 1;
 
+  window.alert("A="+a.toString()+ " B=" + b+" C="+ c);
 
-</script>
+  if(a==b) {
+    if(b==c) {
+      window.alert("no max");
+    } 
+    else {
+      if(b>c) {
+        window.alert("A and B are max");
+      } 
+      else {
+        window.alert("C is max");
+      }
+    }
+  } 
+  else {
+    if(b==c) {
+      if(b>a) {
+        window.alert("B and C are max");
+      } 
+      else {
+        window.alert ("A is max");
+      }
+    } 
+    else {
+      if(a==c) {
+        if(a>b) {
+          window.alert("A and C are max");
+        } 
+        else {
+          window.alert ("B is max");
+        }
+      } 
+      else {
+        if(a>b) {
+          if (a>c) {
+            window.alert("A is max");
+          } 
+          else {
+            window.alert ("C is max");
+          }
+        } 
+        else {
+          if (b>c) {
+            window.alert("B is max");
+          } 
+          else {
+            window.alert("C is max");
+          }
+        }
+      }
+    } 
+    } 
+    
+  </script>
