ex02.html with window.alert done

--- a/ex02.html
+++ b/ex02.html
@@ -5,19 +5,20 @@
     <title>Document</title>
     <script>
         var n = window.prompt("Введите число n и покажу произведение чисел до него");
-        var m=n
+        var i=n;
         var factorial=1;
-        window.alert("n="+n);
-        if(n<0){
-            window.alert("Факториал " + m + "=0");
+        window.alert("n=" + n);
+        if(i<0){
+            window.alert("Факториал " + n + "=0");
         }
         else {
-            while (n>1){
-                factorial=factorial*n;
-                n=n-1;
+            while (i>1){
+                factorial=factorial*i;
+                i--;
             }
+            window.alert("Факториал " + n + "=" + factorial);
         }
-        window.alert("Факториал " + m + "=" + factorial);
+        
     </script>
 </head>
 <body>
