Final version of seconf homework

--- a/ex02.html
+++ b/ex02.html
@@ -6,7 +6,7 @@
 </head>
 
     <script>
-        var n = window.prompt("Введите число n и покажу произведение чисел до него");
+        var n = window.prompt("Введите число n и я покажу его факториал");
         var i=n;
         var factorial=1;
         document.write("n="+n);
