Very final homework lesson_2

--- a/ex02.html
+++ b/ex02.html
@@ -6,21 +6,21 @@
 </head>
 
     <script>
-        var n = window.prompt("Введите число n и я покажу его факториал");
+        var n = window.prompt("Введите число n и я покажу произведение чисел от 1 до него");
         var i=n;
-        var factorial=1;
+        var product=1;
         document.write("n="+n);
-        if(i<0){
-            document.write("Факториал " + n + "=0");
+        if(n<1){
+            document.write("<br> Произведение чисел от 1 до " + n + "=0");
         }
         else {
             while (i>1){
-                factorial=factorial*i;
+                product=product*i;
                 i--;
             }
-            window.alert("Факториал " + n + "=" + factorial);
+            document.write("<br> Произведение чисел от 1 до " + n + "=" + product);
         }
-        document.write("<br> Факториал " + n + "=" + factorial);
+        
     </script>
 <style>
     body {
